# scl-core

./: .clang-format  .clangd  .cursorignore  .gitignore  .parallel_fix.conf  AGNET.md  CLAUDE.md  CMakeLists.txt  COMPLETE_REFACTORING_REPORT.md  FAST_PATH_DESIGN.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_REFACTORING_SUMMARY.md  H5_CONVERSION_GUIDE.md  KERNEL_CODE_REVIEW.md  KERNEL_OPTIMIZATION_SUMMARY.md  KERNEL_REFACTORING_GUIDE.md  MANIFEST.in  Makefile  OPTIMIZATION_PROGRESS.md  REFACTORING_COMPLETE.md  ROADMAP.md  UNIFIED_FAST_PATH_DESIGN.md  analyze.md  c_api_files.json  codegen.toml  compile_commands.json  compile_errors.md  kernels.json  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
CI/: README.md  build.sh  install-deps.sh  lint.sh  test.sh
codegen/: __init__.py  __main__.py  cli.py  config.py
codegen/generators/: __init__.py  base.py  c_api_docs.py  python_binding.py
codegen/parser/: __init__.py  c_types.py  clang_parser.py
codegen/templates/: C_API_DOCS.md  c_api_function.md.j2  c_api_module.md.j2
codegen/types/: __init__.py  ctypes_mapper.py  registry.py
docs/: .gitignore  COMPLETE_MODULE_INVENTORY.md  CONTRIBUTING.md  KERNEL_SURVEY.md  MAPPED_SPARSE_DESIGN.md  MODULES_COMPLETE.md  MODULE_DEPENDENCIES.md  MODULE_QUICK_REFERENCE.md  README.md  SPARSE_MODULE.md  design.md  index.md  test-source-code.md
docs/.vitepress/: README.md  config.ts
docs/_templates/: detail-en.md  detail-zh.md  overview-en.md  overview-zh.md
docs/api/: README.md  index.md
docs/cpp/: README.md  error-handling.md  getting-started.md  index.md  threading.md
docs/design/: registry-v2.md
docs/guide/: getting-started.md
docs/python/: index.md
docs/zh/: index.md
include/scl/: common.hpp  config.hpp  progress.hpp  threading.hpp  version.hpp
libs/: README.md
python/scl/: __init__.py  _backend.py  _config.py  _dtypes.py  _ffi.py  _typing.py  array.py  lazy.py  ops.py  sparse.py
python/tests/: test_core.py
scl/: config.hpp  version.hpp
scl/binding/: C_API_REFACTORING_NOTES.md  c_api.cpp  c_api_backup_20251226_185259.cpp  c_api_new.cpp  instances.cpp
scl/bindings/: bind_math.cpp  module.cpp
scl/core/: MATRIX_ARCHITECTURE.md  PURITY_VALIDATION.md  algo.hpp  argsort.h  argsort.hpp  callback_sparse.hpp  dense.hpp  error.h  error.hpp  graph.hpp  lifetime.hpp  macros.h  macros.hpp  matrix.hpp  memory.h  memory.hpp  registry.h  registry.hpp  simd.h  simd.hpp  sort.h  sort.hpp  sparse.h  sparse.hpp  type.h  type.hpp  vectorize.h  vectorize.hpp
scl/csrc/: error.cpp  threading.cpp
scl/include/: config.hpp  error.hpp  type.hpp
scl/io/: ADAPTIVE_STRATEGY_ANALYSIS.md  ASYNC_MODEL_ANALYSIS.md  h5_tools.hpp  hdf5.h  hdf5.hpp  mmap.hpp  mmatrix.hpp  scheduler.hpp  utils.hpp
scl/kernel/: FUNCTION_SUMMARY.md  algebra.h  algebra.hpp  algebra_fast_impl.hpp  algebra_mapped_impl.hpp  alignment.h  alignment.hpp  annotation.h  annotation.hpp  association.h  association.hpp  bbknn.h  bbknn.hpp  bbknn_fast_impl.hpp  bbknn_mapped_impl.hpp  centrality.h  centrality.hpp  clonotype.h  clonotype.hpp  coexpression.h  coexpression.hpp  communication.h  communication.hpp  comparison.h  comparison.hpp  components.h  components.hpp  core.hpp  correlation.h  correlation.hpp  correlation_fast_impl.hpp  correlation_mapped_impl.hpp  diffusion.h  diffusion.hpp  doublet.h  doublet.hpp  enrichment.h  enrichment.hpp  entropy.h  entropy.hpp  (+129 more)
scl/math/: mwu.h  mwu.hpp  regression.h  regression.hpp  stats.h  stats.hpp
scl/mmap/: README.md  array.h  array.hpp  configuration.h  configuration.hpp  convert.hpp  core.hpp  math.hpp  matrix.hpp  page.h  page.hpp  scheduler.h  scheduler.hpp  sparse.hpp  table.hpp
scl/threading/: parallel_for.h  parallel_for.hpp  scheduler.h  scheduler.hpp  workspace.hpp
scl/utils/: matrix.hpp
scripts/: auto_binding.py  fix_single_file.sh  list_broken_files.py  parse_build_log.py  setup_cpp_dependencies.sh  setup_cpp_dependencies_linux.sh  setup_cpp_dependencies_macos.sh  setup_cpp_dependencies_root.sh  setup_cpp_dependencies_windows.ps1
scripts/parallel_fix/: INTERACTIVE_MODE.md  QUICK_REF.md  README.md  analyze.sh  monitor.sh  quick_fix.sh  run.sh  test_interactive.sh
src/: _hooks.py
src/_kernel/: __init__.py  algebra.py  feature.py  lib_loader.py  normalize.py  qc.py  sparse.py  spatial.py  stats.py  transform.py  types.py  utils.py
src/cpp/: progress.cpp
src/scl/: __init__.py  _hooks.py  _typing.py
src/sparse/: __init__.py  _array.py  _matrix.py  (+1 more)
tests/c_api/: API_GUIDE.md  CMakeLists.txt  Makefile  README.md  SUMMARY.md  TASKS.md  TEST_GUIDE.md
tests/c_api/include/: blas.hpp  core.hpp  data.hpp  guard.hpp  oracle.hpp  precision.hpp  test.hpp
tests/c_api/src/: test_algebra.cpp  test_algebra_spmv.cpp  test_alignment.cpp  test_annotation.cpp  test_association.cpp  test_bbknn.cpp  test_centrality.cpp  test_communication.cpp  test_comp_effect_size.cpp  test_comparison.cpp  test_components.cpp  test_core.cpp  test_core_error.cpp  test_correlation.cpp  test_demo.cpp  test_dense.cpp  test_dense_complete.cpp  test_entropy.cpp  test_feature.cpp  test_group.cpp  test_guards.cpp  test_hotspot.cpp  test_hvg.cpp  test_impute.cpp  test_kernel.cpp  test_leiden.cpp  test_lineage.cpp  test_log1p.cpp  test_louvain.cpp  test_markers.cpp  test_merge.cpp  test_metrics.cpp  test_mmd.cpp  test_multiple_testing.cpp  test_mwu.cpp  test_neighbors.cpp  test_niche.cpp  test_normalize.cpp  test_outlier.cpp  test_permutation.cpp  (+10 more)
tests/c_api/units/: test_algebra  test_algebra_spmv  test_alignment  test_annotation  test_association  test_bbknn  test_centrality  test_communication  test_comp_effect_size  test_comparison  test_components  test_core  test_core_error  test_correlation  test_demo  test_dense  test_dense_complete  test_entropy  test_guards  test_hotspot  test_hvg  test_impute  test_log1p  test_louvain  test_merge  test_metrics  test_mwu  test_neighbors  test_normalize  test_permutation  test_projection  test_propagation  test_qc  test_sparse  test_sparse_basic  test_sparse_complete  test_sparse_ops  test_tools  test_unsafe
(+711 files in other folders)
