[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scl-core"
version = "0.1.0"
description = "High-performance single-cell analysis library with SIMD-optimized C++ kernels"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    # Core dependencies (optional scipy/numpy for interop only)
]

[project.optional-dependencies]
# Full dependencies including scipy/anndata
full = [
    "anndata>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
# All dependencies
all = [
    "anndata>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

# Include compiled libraries in the package
[tool.setuptools.package-data]
scl = ["libs/*.so", "libs/*.dylib", "libs/*.dll"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__"]
